--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Prof Ajax</h1> 
+   <header>
+       <img src="imagem/banner.jpg" width="960">
+   </header>
+   <nav>
+       <a href="index.html">Princial</a> |
+       <a href="musicas para programação.html">Musicas</a> |
+       <a href="aulas.html">Aula</a> |
+       <a href="contato.html">contato</a> | 
+   </nav><br>
+   <img src="imagem/java.png" width="200">
+   <figcaption>
+       <h1>Java</h1>
+       <p>O Java é uma linguagem de programação orientada a objetos e é uma das linguagens mais utilizadas pelas empresas na atualidade no desenvolvimento de aplicações WEB e Mobile.</p>
+   </figcaption>
+   <img src="imagem/C.png" width="200">
+   <figcaption>
+       <h1>C#</h1>
+       <p>C# é uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte da plataforma </p>
+    </figcaption>
+    <img src="imagem/python.png" width="200">
+    <figcaption>
+        <h1>Python</h1>
+        <p>Python é uma linguagem de programação de alto nível, interpretada de script, imperativa, orientada a objetos, funcional, de tipagem dinâmica e forte.</p>
+    </figcaption>
+    <img src="imagem/R.png" width="200">
+    <figcaption>
+        <h1>R</h1>
+        <p>R é uma linguagem de programação multi-paradigma orientada a objetos, programação funcional, dinâmica, fracamente tipada, voltada à manipulação, análise e visualização de dados. </p>
+    </figcaption>
 </body>
 </html>
